2002-12-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/xmlutils.py (XMLElement.walk): added walk() method to
	XMLElement. 
	(XMLElement.walk): fixed to actually do something.

2002-12-04  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/argextract.py: oops, so was this.

	* SkunkWeb/Services/web/protocol.py (HTTPConnection.extract_args):
	oops, this was broken.

2002-12-04  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/views.py, pylibs/formlib/form.py: fixed several
	instances of the "default function value gotcha"; some reformatting.

2002-12-04  James Richards  <jrichards@satie.wnyc.org>

	* test/formlib/htdocs/testNestedList.pyinc (form): Added
	NestedListLayout() to ViewableForm construction to test new nested
	list layout support

	* pylibs/formlib/views.py (Layout.handleError): Base class with
	standard semantics for error handling during layout
	(FlowLayout.layoutFields): flow layout for simple flow based form
	layout
	(StackLayout.layoutFields): stack layout for default stack based
	form layout
	(NestedListLayout.layoutFields): nested layout for more complex
	form layouts
	(ViewableForm.__init__): added layout construction parameter to
	viewable form using StackLayout as default form layout
	(ViewableForm._get_fieldLayout): added ViewableForm.fieldLayout as
	property to separate layout concerns from form fields property
	(ViewableForm._flattenFields): utility method to separate form
	fields from form field layout concerns
	(ViewableForm.getView): moving bulk of view generation to layout
	instance
	(ViewableCompositeField.__init__): Adding abstraction to allow
	composite fields to be directly viewable within a ViewableForm
	rather than always deferring to FieldProxies

2002-12-03  Jacob Smullyan <smulloni@smullyan.org>

	* test/sitelibs/formlibtest/testDispatch3.py
	(PushyFlowManager.next): added state.clear() when returning to the
	beginning.

	* pylibs/formlib/dispatcher.py: several api changes, mostly